# Terminal

./: .gitignore  README.md
blmtrm/: package-lock.json  package.json  pnpm-lock.yaml
blmtrm/client/src/: index.css
blmtrm/server/: routes.ts  storage.ts
docs/live/: current-focus.md  progress.md  todo.md
logo/: icon.af
plans/: data-schema-redesign.md  play-tracker-roadmap.md  ui-ux-audit.md
python-backend/: .gitignore  pyproject.toml
python-backend/app/: main.py
python-backend/app/api/: router.py
python-backend/app/api/routes/: economics.py  news.py  portfolio.py  quotes.py  screener.py
python-backend/app/core/: config.py  http.py
python-backend/app/models/: __init__.py  common.py  economics.py  news.py  portfolio.py  quotes.py  screener.py
python-backend/tests/: test_contract_models.py  test_health.py
src/: notes.txt  package-lock.json  package.json  tailwind.config.ts
src/migrations/: 0001_initial_schema.sql  0002_seed_instruments.sql
src/remotion/: DemoVideo.tsx  Root.tsx  index.ts  terminal.css
src/server/: alertMonitor.test.ts  alertMonitor.ts  alertsEngine.test.ts  alertsEngine.ts  dataStatus.test.ts  dataStatus.ts  economicsData.test.ts  economicsData.ts  index.test.ts  index.ts  listenConfig.ts  marketData.test.ts  marketData.ts  marketScorecard.ts  onchain.ts  openbbProvider.ts  optionsFlow.ts  portfolioAnalytics.test.ts  portfolioAnalytics.ts  providerUtils.ts  routes.ts  sentimentAnalyzer.ts  socialFeed.ts  socialSentiment.ts  storage.ts  vite.ts
src/shared/: schema.ts
src/trading/: example.ts  signals.ts
(+107 files in other folders)
