[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blmtrm-finance-service"
version = "0.1.0"
description = "FastAPI finance service for BLMTRM"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "pydantic",
  "pytest",
  "financetoolkit",
  "financedatabase",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
